--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title>PPR History</title>
-    <link rel="stylesheet" href="ppstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="cvs"></canvas>
-    <script src="ppscript.js"></script>
+    <script src="script.js"></script>
 </body>
