--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>PPR History</title>
+    <title>PP Match Chart</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
